Day11 part 2